--- a/index.html
+++ b/index.html
@@ -12,72 +12,72 @@
     />
 </head>
 <body>
-    <header>
-        <ul>
-            <li>About</li>
-            <li>Work</li>
-            <li>Contact</li>
+    <header class="navbar">
+        <ul class="navbar-list">
+            <li><a>About</a></li>
+            <li><a>Work</a></li>
+            <li><a>Contact</a></li>
         </ul>
     </header>
     <main>
-        <div>
+        <div class="welcome">
             <h1>Hey I am Mimic</h1>
             <p>a web developer</p>
         </div>
-        <section>
-            <h1>These are some of my projects</h1>
+        <section class="projects-sec">
+            <h1 class="p-title">These are some of my projects</h1>
             <article>
-              <div> 
+              <div class="projects"> 
             <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/random-quote-machine.png"
              alt="project"/>
              <p class="sample-title"><a  class="sample-link" href="https://codepen.io/freeCodeCamp/full/wGqEga"
                 target="_blank"><span class="code">&lt;</span>Random Quote Machine</a><span class="code">&#47;&gt;</span></p></div>
-        <div class="project-examples"><img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/calc.png">
+        <div class="project-samples"><img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/calc.png">
         <p class="sample-title"><a class="sample-link" href="https://codepen.io/freeCodeCamp/full/wGqEga"
                 target="_blank"> <span class="code">&lt;</span>javascript Calculator</a> <span class="code">&#47;&gt;</span></p></div>
-        <div class="project-examples"><img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/map.jpg">
+        <div class="project-samples"><img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/map.jpg">
         <p class="sample-title"><a class="sample-link" href="https://codepen.io/freeCodeCamp/full/wGqEga"
                 target="_blank"><span class="code">&lt;</span>Map Data Across the  <span class="code">&#47;&gt;</span></a></p></div>
-        <div class="project-examples"><img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/wiki.png">
+        <div class="project-samples"><img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/wiki.png">
         <p class="sample-title"><a class="sample-link" href="https://codepen.io/freeCodeCamp/full/wGqEga"
                 target="_blank"><span class="code">&lt;</span>Wikipedia Viewer</a> <span class="code">&#47;&gt;</span></p></div>
-        <div class="project-examples"><img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tic-tac-toe.png">
+        <div class="project-samples"><img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tic-tac-toe.png">
         <p class="sample-title"><a class="sample-link" href="https://codepen.io/freeCodeCamp/full/wGqEga"
                 target="_blank"><span class="code">&lt;</span>Tic Tac Toe Game</a> <span class="code">&#47;&gt;</span></p></div>
             </div>
         </div>
     </main>
-    <footer>
+    <footer id="contact">
         <h1>Let's work together...</h1>
         <p>How do you take your coffee?</p>
-        <div class="icons">
+        <div >
             <a href="https://facebook.com/freecodecamp"
                   target="_blank" class="icons-words">
               <i class="fab fa-facebook-square"></i>
-              <p class="icon">Facebook</p>
+              <p>Facebook</p>
             </a>
             <a id="profile-link"
                   href="https://github.com/freecodecamp"
                   target="_blank" class="icon-words">
               <i class="fab fa-github"></i>
-              <p class="icon">GitHub</p>
+              <p >GitHub</p>
             </a>
             <a href="https://twitter.com/freecodecamp"
                   target="_blank" class="icon-words">
               <i class="fab fa-twitter"></i>
-              <p class="icon">Twitter</p>
+              <p >Twitter</p>
             </a>
             <a href="/cdn-cgi/l/email-protection#a5c0ddc4c8d5c9c0e5c0ddc4c8d5c9c08bc6cac8" class="icon-words">
               <i class="fas fa-at"></i>
-              <p class="icon">Send a mail</p>
+              <p>Send a mail</p>
             </a>
             <a href="tel:555-555-5555" class="icon-words">
               <i class="fas fa-mobile-alt"></i>
-              <p class="icon">Call me</p>
+              <p>Call me</p>
             </a>
             </div>
             <section>
-                <div></div>
+                <div class="line"></div>
                 <div>
                     <p>**This is just a fake portfolio. All the projects and contact details
                          given are not real.</p>
